[package]
name = "apex_dashboard_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.37"
diesel = "2.1.5"
json = "0.12.4"
serde = "1.0.197"
serde_json = "1.0.115"
surrealdb = "1.3.1"
uuid = "1.8.0"
validator = "0.17.0"
